--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://minhducctchv.github.io/english-app/",
+  "homepage": "https://minhducctchv.github.io/english-app-fe/",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
