--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@tanstack/react-query": "^5.66.9",
     "antd": "^5.24.1",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.9",
+    "dayjs": "^1.11.13",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
     "styled-components": "^6.1.15",
